--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Exercise 1</title>
 </head>
+
+	<header>
+
+		<h1>Beetroot <i>Beta vulgaris</i></h1>
+
+	</header>
+
 <body>
 
-	<h1>Hello</h1>
+	<img src="beets.jpg">
+
+		<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+
+
+
+
   
 </body>
 </html>
