--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 
 <body>
 
-	<img src="beets.jpg">
+	<figure>
 
-		<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+		<img src="images/beets.jpg">
+
+			<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+
+	</figure>
 
 
 
