--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
 
 	<figure>
 
-		<img src="images/beets.jpg">
+		<img src="images/beets.jpg" alt="beets">
 
 			<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
 
 	</figure>
+
+		<p>55 to 65 days are needed from germination to harvest of the root.</p>
+
+		<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a
+cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
+shredded, either alone or combined with any salad vegetable.</p>
 
 
 
