--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
 shredded, either alone or combined with any salad vegetable.</p>
 
+		<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</blockquote>
+
+			<cite>— Jim Halpert</cite>
 
 
 
