--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Exercise 1</title>
+  <link href="general.css" rel="stylesheet">
 </head>
 
 	<header>
@@ -27,9 +28,35 @@
 cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
 shredded, either alone or combined with any salad vegetable.</p>
 
-		<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</blockquote>
+		<blockquote>
 
-			<cite>— Jim Halpert</cite>
+			<p>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</p>
+
+			<footer>
+
+				—<cite>Jim Halpert</cite>
+
+			</footer>
+
+		</blockquote>
+
+		<blockquote>
+
+			<p>I have some <em>weird</em> habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.</p>
+
+			<footer>
+
+				—<cite>Chris Pratt</cite>
+
+			</footer>
+
+		</blockquote>
+
+			<h2>
+
+
+
+
 
 
 
