--- a/index.html
+++ b/index.html
@@ -52,7 +52,28 @@ shredded, either alone or combined with any salad vegetable.</p>
 
 		</blockquote>
 
-			<h2>
+			<h2>Coomon Varieties</h2>
+
+				<ol>
+					<li>Albino</li>
+					<li>Bull’s Blood</li>
+					<li>Chioggia</li>
+					<li>Detroit Dark Red</li>
+					<li>Early Wonder</li>
+				</ol>
+
+			<h2>Nutritional Information</h2>
+
+				<p>Serving size:</p> 100 g
+
+				<dl>
+					<dt>Energy:</dt> <data>180 kJ</data>
+					<dt>Carbohydrates:</dt> <data>9.96 g</data>
+					<dt>Fat:</dt> <data>0.18 g</data>
+					<dt>Protein:</dt> <data>1.68 g</data>
+				</dl>
+
+			<h2>Tags</h2>
 
 
 
