--- a/index.html
+++ b/index.html
@@ -67,10 +67,22 @@ shredded, either alone or combined with any salad vegetable.</p>
 				<p>Serving size:</p> 100 g
 
 				<dl>
-					<dt>Energy:</dt> <data>180 kJ</data>
-					<dt>Carbohydrates:</dt> <data>9.96 g</data>
-					<dt>Fat:</dt> <data>0.18 g</data>
-					<dt>Protein:</dt> <data>1.68 g</data>
+					<dt>Energy:</dt> 
+					<dd>
+						<data>180 kJ</data>
+					</dd>
+					<dt>Carbohydrates:</dt> 
+					<dd>
+						<data>9.96 g</data>
+					</dd>
+					<dt>Fat:</dt> 
+					<dd>
+						<data>0.18 g</data>
+					</dd>
+					<dt>Protein:</dt> 
+					<dd>
+						<data>1.68 g</data>
+					</dd>
 				</dl>
 
 			<h2>Tags</h2>
