--- a/index.html
+++ b/index.html
@@ -87,12 +87,14 @@ shredded, either alone or combined with any salad vegetable.</p>
 
 			<h2>Tags</h2>
 
-
-
-
-
-
-
+				<ul>
+					<li><link href="Crimson"</li>
+					<li>Awesome</li>
+					<li>Pickle-able</li>
+					<li>Vegetable!</li>
+					<li>Delicious</li>
+					<li>Source: Wikipedia; Last modified: Aug 30, 2014</li>
+				</ul>
   
 </body>
 </html>
