--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ shredded, either alone or combined with any salad vegetable.</p>
 			<h2>Tags</h2>
 
 				<ul>
-					<li><link href="Crimson"</li></li>
+					<li><link href="Crimson"></li>
 					<li>Awesome</li>
 					<li>Pickle-able</li>
 					<li>Vegetable!</li>
