--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@ shredded, either alone or combined with any salad vegetable.</p>
 			<h2>Tags</h2>
 
 				<ul>
-					<li><a href="wikipedia.com/crimson">Crimson</a></li>
-					<li>Awesome</li>
-					<li>Pickle-able</li>
-					<li>Vegetable!</li>
-					<li>Delicious</li>
+					<li><a href="http://en.wikipedia.org/wiki/Crimson">Crimson</a></li>
+					<li><a href="http://en.wikipedia.org/wiki/Awesome">Awesome</a></li>
+					<li><a href="http://en.wikipedia.org/wiki/Pickle">Pickle-able</a></li>
+					<li><a href="http://en.wikipedia.org/wiki/Vegetable">Vegetable!</a></li>
+					<li><a href="http://en.wikipedia.org/wiki/Delicious">Delicious</a></li>
 					<li>Source: Wikipedia; Last modified: Aug 30, 2014</li>
 				</ul>
   
