--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@ shredded, either alone or combined with any salad vegetable.</p>
 					</dd>
 				</dl>
 
+</body>
+
+<footer>
+
 			<h2>Tags</h2>
 
 				<ul>
@@ -93,8 +97,9 @@ shredded, either alone or combined with any salad vegetable.</p>
 					<li><a href="http://en.wikipedia.org/wiki/Pickle">Pickle-able</a></li>
 					<li><a href="http://en.wikipedia.org/wiki/Vegetable">Vegetable!</a></li>
 					<li><a href="http://en.wikipedia.org/wiki/Delicious">Delicious</a></li>
-					<li>Source: Wikipedia; Last modified: Aug 30, 2014</li>
+					<li>Source: <a href="http://en.wikipedia.org">Wikipedia;</a> 
+					Last modified: <time>Aug 30, 2014</time></li>
 				</ul>
-  
-</body>
+
+</footer>
 </html>
