added width to image

--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@ shredded, either alone or combined with any salad vegetable.</p>
 					<li><a href="http://en.wikipedia.org/wiki/Pickle">Pickle-able</a></li>
 					<li><a href="http://en.wikipedia.org/wiki/Vegetable">Vegetable!</a></li>
 					<li><a href="http://en.wikipedia.org/wiki/Delicious">Delicious</a></li>
-					<li>Source: <a href="http://en.wikipedia.org">Wikipedia;</a> 
-					Last modified: <time>Aug 30, 2014</time></li>
 				</ul>
+
+				<p>Source: <a href="http://en.wikipedia.org">Wikipedia;</a> 
+					Last modified: <time>Aug 30, 2014</time></p>
 
 </footer>
 </html>
