--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <title>Exercise 1</title>
   <link href="general.css" rel="stylesheet">
 </head>
+<body>
+<main>
 
 	<header>
 
 		<h1>Beetroot <i>Beta vulgaris</i></h1>
 
 	</header>
-
-<body>
 
 	<figure>
 
@@ -52,7 +52,7 @@ shredded, either alone or combined with any salad vegetable.</p>
 
 		</blockquote>
 
-			<h2>Coomon Varieties</h2>
+			<h2>Common Varieties</h2>
 
 				<ol>
 					<li>Albino</li>
@@ -103,4 +103,5 @@ shredded, either alone or combined with any salad vegetable.</p>
 					Last modified: <time>Aug 30, 2014</time></p>
 
 </footer>
+</main>
 </html>
